# buddy4passes

./: README.md  package-lock.json
.github/workflows/: rds-deployment.yaml
Cloud/: .env  dockerfile  package.json  pool.js  server.js
Cloud/middleware/: auth.js  hashing.js
Cloud/routes/: accountAdd.js  accountDelete.js  accountDisplay.js  accountEdit.js  chmastercreds.js  displayAccounts.js  getUserData.js  getUserDataAuth.js  groupsAdd.js  groupsDelete.js  groupsDisplay.js  groupsEdit.js  masterAccChanges.js  userDelete.js  userLogin.js  userRefreshToken.js  userRegistration.js
Website/: downladpage.css  downloadpage.html  downloadpage.js
buddy4passes/: package-lock.json  package.json
buddy4passes/src/: App.jsx  main.jsx
buddy4passes/src-tauri/: Cargo.toml  tauri.conf.json
buddy4passes/src-tauri/icons/: icon.icns
buddy4passes/src-tauri/src/: crypt.rs  lib.rs  main.rs
buddy4passes/src-tauri/src/routes/: account_add.rs  account_chcreds.rs  account_delete.rs  account_display.rs  groups_add.rs  groups_delete.rs  groups_display.rs  groups_edit.rs  mod.rs  userLogin.rs  user_chmastercreds.rs  user_delete.rs  user_fetchdataauth.rs  user_login.rs  user_registration.rs
buddy4passes/src/components/: AccountCard.jsx  AddAccountDialog.jsx  DisplayAccountDialog.jsx  Footer.jsx  Header.jsx  LoginForm.jsx  NestedList.jsx  RegistrationForm.jsx  SnackbarContext.jsx
buddy4passes/src/contexts/: SnackbarContext.jsx
buddy4passes/src/pages/: App.jsx  Dashboard.jsx  Landing.jsx  Login.jsx  MasterEdit.jsx  Register.jsx
src-tauri/: tauri.conf.json
(+8 files in other folders)
