[package]
name = "buddy4passes"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "buddy4passes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
struct_iterable = "0.1"

# Krypto-Bibliotheken
# AES-Verschlüsselung
aes-gcm = { version = "0.10", features = ["aes", "std"] }
# Passwort-Hashing
argon2 = { version = "0.5", features = ["std"] }
# Zufallszahlengenerator
rand = { version = "0.8", features = ["std"] }
# Base64-Kodierung
base64 = "0.21"
# Fehlerbehandlung
thiserror = "1.0"

# Requests

reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tauri-plugin-single-instance = "2.3.6"
